# etl-airflow

./: .gitignore  README.md  pyproject.toml
src/: controller.py  main.py
src/contracts/: schema.py
